# pfe

./: .gitignore  ChangeLog  Changelog  INSTALL  INSTALL.TXT  Makefile  Makefile.am  Makefile.in  Makefile.mk  README  TODO  aclocal.m4  autogen.sh  configure  configure.ac  ltmain.sh  mkinstalldirs  pfe.spec
doc/: 4thtutor.ar  Makefile  Makefile.am  Makefile.in  PFE.css  PFE.pl  authors.htm  body.htm  dirk-zoller-readme.dbk  doc-index.dbk  documentation.htm  header-fields.dbk  help2man.pl  how-to-write-a-pfe-module.dbk  index.htm  internal-decisions-about-headers.dbk  known-problems.dbk  lgpl-license.dbk  lgpl-license.htm  license.dbk  license.htm  literature.dbk  locals.dbk  make-dist.dbk  makedocs.py  manpage.dbk  pfe-manual.dbk  pfe-master.odt  pfe.1  porting-sbr-threading.dbk  quoted-parse-idea.dbk  sf-html.html.in  sf-index.dbk  sf-news.html.in  special-implementation-strategies.dbk  statesmart-words.dbk  threading.dbk  tuning.dbk  uppercasing.dbk  wordset-modules.dbk
doc/pfedoc/: commentmarkup.py  docbookdocument.py  forthheader.py  forthmodule.py  forthnotation.py  forthwords.py  forthwordset.py  forthwordsethtmlpage.py  forthwordsetreference.py  functionheader.py  functionlisthtmlpage.py  functionlistreference.py  functionprototype.py  htmldocument.py  odtdocument.py  odttypes.py  textfile.py
doc/src/: Makefile  PFE.css
exepfe/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
lib/: Makefile.am  Makefile.in  doermake.4th  easy4th.f  library.4th  sh-libs.4th  struct.4th
libpfe/: ChangeLog33.txt  Makefile.am  Makefile.in  TODO  aclocal.m4  configure  configure.ac
libpfe/src/lib/: Makefile.am
libpfe/src/lib/pfe/: cdecl-stk.c  chain-stk.c  complex-ext.c  def-cell.h  def-pth.h  dl-def.c  double-ext.c  emu-menu-table.c  exception-ext.h  exception-sub.c  file-stk.c  floating-dll.c  fpnostack-dll.c  incl-ext.h  memory-alloc-stk.c  option-set.h  pfe-ext.h  posix-ext.h  signals-ext.c  stackhelp-dll.c  struct-ext.c  term-k12.c  toolbelt-dll.c
libpfe/src/main/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
libpfe/src/main/c/: Makefile.am  Makefile.in  _missing.c  _nonansi.h  assembler-dll.c  assembler-ext.c  block-ext.c  block-mix.c  block-stk.c  block-sub.c  cdecl-ext.c  cdecl-stk.c  chain-ext.c  chain-stk.c  chainlist-ext.c  chainlist-stk.c  complex-dll.c  complex-ext.c  core-ext.c  core-mix.c  core-stk.c  core-sub.c  core-sub.h  debug-ext.c  debug-stk.c  def-check.c  def-comp-c89.h  def-types.h  dict-comp.c  dict-ext.c  dict-sub.c  dl-def.c  dl-dlfcn.c  dl-ext.c  dl-hpux.c  dl-internal.c  dl-none.c  dl-vxworks.c  dl-win32.c  double-ext.c  (+101 more)
libpfe/src/main/doc/: Makefile.am  Makefile.in  changes.htm  help2man.pl  lgpl-license.dbk  special-implementation-strategies.dbk
libpfe/src/main/include/: Makefile.am  Makefile.in  config.h.in
libpfe/src/main/pfe/: cdecl-ext.h  chainlist-ext.c  configure.ac  dict-comp.c  dl-win32.c  double-mix.c  exception-sub.h  facility-ext.c  file-mix.c  floating-ext.c  fpnostack-ext.c  fpnostack-ext.h  gforth-ext.c  incl-sup.h  main-def.c  main-static.c  main-sub.h  memory-alloc-ext.h  option-ext.c  os-setjmp.h  os-string.h  p4-gettimeofday.h  pfe-sup.h  search-order-ext.h  shell-os-ext.c  socket-dll.c  stackhelp-ext.h  string-ext.c  term-sub.c  useful-ext.c  version-sub.c
libpfe/src/share/: Makefile.in  arrays.4th  loading.4th
libpfe/src/test/: Makedist.mk  Makefile.am  Makefile.in  anslocal.4th  anslocal.test.ok  anslocal.test64.ok  answords.fs  checkans.fs  compare.4th  coretest.4th  dbltest.4th  dstester.fs  environ.4th  environ.test64W.ok  environ.testW.ok  fp-stack.test.ok  fp-stack.test64.ok  fpnostack.sh  fpnostack.test.ok  locals-ext.4th  loop-test.4th  loop-test.sh  loop-test.test.ok  parse-name.test64.ok  postpone.fs  queryapp.4th  queryapp.sh  run1.in.sh  search-order.4th  search-order.fs  search-order.sh  sievem.fs  speedwhile.fs  stack.sh  stack.test.ok  string.4th  suite.4th  test-num-prefixes.fs  test-num-prefixes2.test.ok  wordsets.4th  (+1 more)
libpfe/src/test/anstests1/: Makefile.am  Makefile.in
libpfe/src/tool/: Makefile.am  Makefile.in
libpfe/src/tool/dbk/: pfe-fth.mk  wordsets2words.pl
libpfe/src/tool/pfe/: Make-H.pl  Make-H.py  make-header.py
mk/: Make-H.pl  (+2 more)
pfe/: Makefile.am  Makefile.in  _missing.c  _missing.h  _nonansi.h  acconfig.h  aclocal.m4  assembler-ext.c  assembler-ext.h  block-ext.c  block-ext.h  block-mix.c  block-mix.h  block-stk.c  block-sub.c  block-sub.h  cdecl-ext.c  cdecl-ext.h  cdecl-stk.c  chain-ext.c  chain-ext.h  chain-stk.c  chainlist-ext.c  chainlist-ext.h  chainlist-stk.c  complex-dll.c  complex-ext.c  complex-ext.h  config.h.in  configure  configure.ac  configure.in  core-ext.c  core-ext.h  core-mix.c  core-mix.h  core-stk.c  core-sub.c  core-sub.h  debug-ext.c  (+196 more)
pfe/libltdl/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
pfe_docs/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
pfe_docs/src/main/doc/: Makefile.am  Makefile.in  documentation.htm  dpans.ar  known-problems.dbk  license.dbk  literature.dbk  make-dist.dbk  pfe.htm  porting-sbr-threading.dbk  posixcalls.dbk  quoted-parse-idea.dbk  uppercasing.dbk
pfe_docs/src/tool/: Makefile.am  Makefile.in
test/: Makedist.mk  Makefile  Makefile.am  Makefile.in  anslocal.4th  arith.4th  arith.sh  arith.test.ok  benchm.blk  checkans.4th  checkans.fs  checkans.sh  compare.4th  compspeed.fs  coretest.4th  coretest.sh  coretest.test.ok  dbltest.fs  deferred-x.4th  deferred-x.fs  deferred-x.test.ok  deferred-x.test64.ok  deferred.fs  defs.4th  defs.sh  defs.test.ok  dstrings-test.fs  dstrings.txt  environ.4th  environ.nomodules.ok  environ.sh  environ.test.ok  environ.test64.ok  exceptn.4th  exceptn.test.ok  fib.fs  file.4th  file.sh  float.4th  float.sh  (+43 more)
test/anstests1/: Makefile.am  Makefile.in
testmodule1/: Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  testmodule1-ext.c  testmodule1.fs
testmodule1/src/main/c/: testmodule1-dll.c  testmodule1-ext.c
testmodule2/: Makefile.in  aclocal.m4  configure  configure.ac  testmodule2-dll.c  testmodule2-ext.c
(+273 files in other folders)
