AC_INIT(pfe-exec.c)
AC_PREREQ(2.49)
AC_COPYRIGHT([Guido U. Draheim <guidod@gmx.de> for PFE.sourceforge.net])
AC_REVISION($Revision: 1.2 $)
AC_CONFIG_AUX_DIR([../config/aux])
AC_CONFIG_MACRO_DIR([../config/m4])
AC_CANONICAL_HOST
AC_CANONICAL_SYSTEM
AC_LANG_C
AC_PROG_CC
AC_SET_DEFAULT_PATHS_SYSTEM
AC_SPEC_PACKAGE_VERSION(pfe.spec)
AM_INIT_AUTOMAKE($PACKAGE, $VERSION)
AC_LIBTOOL_WIN32_DLL
AM_PROG_LIBTOOL
AC_PROG_INSTALL
AC_OUTPUT(Makefile)
