AUTOMAKE_OPTIONS = 1.5 foreign dist-bzip2
AUTOTOOL_VERSION = autoconf-2.52 automake-1.5 libtool-1.4.2

# these are outdated, sorry...
noinst_DATA = \
   arrays.4th    doermake.4th  library.4th  \
   defer-is.4th  easy4th.f     loading.4th  \
   pardot.4th    struct.4th    sh-libs.4th
EXTRA_DIST = $(DATA)
