dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/main/include/pfe.h)
AC_PREREQ(2.49)
AC_COPYRIGHT([Guido U. Draheim <guidod@gmx.de> for PFE.sourceforge.net])
AC_REVISION($Revision: 1.12 $)
AC_CONFIG_AUX_DIR([../config/aux])
AC_CONFIG_MACRO_DIR([../config/m4])
AC_CONFIG_SUBDIRS([src/main])
AC_OUTPUT([Makefile])
AC_MSG_NOTICE(mkdir tool/dbk)
AS_MKDIR_P(tool/dbk)
